Small alignment fix

--- a/public/css/default/_navbar.scss
+++ b/public/css/default/_navbar.scss
@@ -36,7 +36,7 @@ a.navbar-brand {
 
 a.navbar-brand img {
     float: left;
-    margin: 0 15px 0 0;
+    margin: 0 7px 0 0;
 }
 
 a.navbar-brand span {
